# math-solver

./: .gitignore  LICENSE  README.md  math-solver.cabal  stack.yaml
src/: Main.hs
src/MathSolver/: Types.hs
src/MathSolver/Calc/: Solver.hs
src/MathSolver/NLP/: Combinators.hs  Parser.hs  WordNum.hs
