name:                math-solver
version:             0.2.0
synopsis: Eventually, this project will solve basic arithmetic word problems.
description: The goal of the project is to be able to parse, solve, and answer (in natural language) basic math word problems. The program will be given a math problem in paragraph form that involves addition and subtraction. We might add more operations later. The system then parses the question it’s asked to solve to determine the problem type and what information is needed. The system will then preprocess the problem into a problem that is easier to parse directly, and it’ll remove all irrelevant data. Next, the system will parse the rest of the problem into a list of events. After parsing, each event’s action will be converted to its category. The events will then be evaluated, and the system will keep track of the state throughout the evaluation process. Then, the question will be applied to the final state to calculate an answer. Finally, the answer will be translated back into a natural language response.
homepage:            https://github.com/brainfrz/math-solver#readme
license:             BSD3
license-file:        LICENSE
author:              Terry Weiss
maintainer:          ttweiss@syr.edu
copyright:           2017 Terry Weiss
category:            Math, Natural Language Processing, Parsing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Main
--                     , MathSolver.Types
--                     , MathSolver.Calc.Solver
--                     , MathSolver.NLP.WordNum
  build-depends:       base
                     , chatter
                     , containers
                     , parsec
                     , split
                     , text
                     , cereal
                     , QuickCheck (>=2.1 && <2.10)
                     , stemmer
  default-language:    Haskell2010
